Revert "Re-deliver improved version of PR #7356"